# tech-challenge-fase1-nps

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
data/processed/: data_dictionary.md  desafio_nps_fase_1_processado.csv
data/raw/: data_dictionary.md
models/: modelo_predicao_detrator_nps.pkl
notebooks/: 01-analise-exploratoria.ipynb  01-analise-exploratória.ipynb  02-modelagem-e-avaliacao.ipynb
reports/: 01_resumo_regiao.csv  02_resumo_etaria.csv  03_resumo_atraso.csv  04_resumo_contatos.csv  05_resumo_reclamacoes.csv  06_resumo_resolucao.csv  07_resumo_csat.csv  08_ranking_fatores_nps.csv
