[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tech_challenge_nps_preditivo"
version = "0.0.1"
description = "Analise de case de NPS para o Tech Challenge da Fase 1"
authors = [
  { name = "Grupo 16" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["tech_challenge_nps_preditivo"]
force_sort_within_sections = true


